--- a/features.html
+++ b/features.html
@@ -18,7 +18,7 @@
 			<li><a href="#main">Jump to main content</a></li>
 			<li><a href="#nav">Jump to main navigation</a></li>
 		</ul>
-		<header class="silver" role="banner">
+		<header class="whiteback" role="banner">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
 					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy"></a></div>
@@ -29,14 +29,14 @@
 							<li class="island-1-2"><a href="index.html">Home</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
-							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Create an Account</a></li>
+							<li class="island-1-2 tuscany button normal"><a class="white" href="signup.html">Create an Account</a></li>
 						</ol>
 					</nav>
 				</div>
 			</div>
 		</header>
 		<main role="main" id="main">
-			<div class="grid pad-t pad-t-2 pad-b grey">
+			<div class="grid pad-t pad-t-2 pad-b whiteback">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<h1 class="push-1-2">Features</h1>
 				</div>
