--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
 			<li><a href="#main">Jump to main content</a></li>
 			<li><a href="#nav">Jump to main navigation</a></li>
 		</ul>
-		<header class="silver" role="banner">
+		<header class="whiteback" role="banner">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
 					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy"></a></div>
@@ -29,14 +29,14 @@
 							<li class="island-1-2"><a href="index.html">Home</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
-							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Create an Account</a></li>
+							<li class="island-1-2 tuscany button normal"><a class="white" href="signup.html">Create an Account</a></li>
 						</ol>
 					</nav>
 				</div>
 			</div>
 		</header>
 		<main role="main" id="main">
-			<div class="grid pad-t-2 pad-b grey">
+			<div class="grid pad-t-2 pad-b whiteback">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<h1 class="push-1-2">Signup</h1>
 				</div>
@@ -94,10 +94,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="grid pad-t-2 pad-b-2 drkgrey center">
+			<div class="grid castle pad-t-2 pad-b-2 drkgrey center">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
-						<p class="text-center push-1-2">Already a member?</p>
+						<p class="text-center white push-1-2">Already a member?</p>
 						<form action="https://formspree.io/kevinmcintyre2014@gmail.com" method="post">
 							<div>
 								<input name="email" id="email" type="email" placeholder="Email" class="input push-1-2" required>
@@ -106,7 +106,7 @@
 								<input name="password" id="password" type="password" placeholder="Password" class="input push-1-2" required>
 							</div>
 							<div>
-								<button class="white black button2 kilo" type="submit">Login</button>
+								<button class="white button2 kilo tocantins" type="submit">Login</button>
 							</div>
 							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
