--- a/subscriptions.html
+++ b/subscriptions.html
@@ -18,7 +18,7 @@
 			<li><a href="#main">Jump to main content</a></li>
 			<li><a href="#nav">Jump to main navigation</a></li>
 		</ul>
-		<header class="silver" role="banner">
+		<header class="whiteback" role="banner">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
 					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy"></a></div>
@@ -29,14 +29,14 @@
 							<li class="island-1-2"><a href="index.html">Home</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
-							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Create an Account</a></li>
+							<li class="island-1-2 tuscany button normal"><a class="white" href="signup.html">Create an Account</a></li>
 						</ol>
 					</nav>
 				</div>
 			</div>
 		</header>
 		<main role="main" id="main">
-			<div class="grid pad-t-2 pad-b-2 grey">
+			<div class="grid pad-t-2 pad-b-2 whiteback">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<h1 class="push-1-2">Subscriptions</h1>
 				</div>
@@ -46,21 +46,21 @@
 						<p class="push-0">• Learn only one language at a time.</p>
 						<p class="push-0">• Access Level 1 & 2 of your chosen language.</p>
 						<p>• Use over half of our interactive game collection, crosswords and word searches, and quizzes</p>
-						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="tuscany button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 guttersub pad-t pad-b two">
 						<p class="bold push-0">BASE LEVEL - $9.99/MONTH</p>
 						<p class="push-0">• Learn only one language at a time.</p>
 						<p class="push-0">• Access Level 1 - 3 of your chosen language.</p>
 						<p>• Use our entire interactive game collection, crosswords and word searches, and quizzes</p>
-						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="tuscany button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 guttersub pad-t pad-b three">
 						<p class="bold push-0">ADVANCED LEVEL - $14.99/MONTH</p>
 						<p class="push-0">• Learn 2 languages at once.</p>
 						<p class="push-0">• Access Level 1 - 4 of your chosen language.</p>
 						<p>• Use our entire interactive game collection, crosswords and word searches, quizzes, and live chat feature.</p>
-						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="tuscany button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 guttersub pad-t pad-b four">
 						<p class="bold push-0">FLUENT LEVEL - $149.99/YEAR</p>
@@ -68,7 +68,7 @@
 						<p class="push-0">• Access Level 1 - 6 of your chosen language.</p>
 						<p class="push-0">• Use our entire interactive game collection, crosswords and word searches, quizzes, live chat feature, and movie and show library.</p>
 						<p>• Private tutoring system</p>
-						<p class="black button push-0"><a class="white" href="signup.html">Select Plan</a></p>
+						<p class="tuscany button push-0"><a class="white" href="signup.html">Select Plan</a></p>
 					</div>
 				</div>
 			</div>
