fixed form setup

--- a/signup.html
+++ b/signup.html
@@ -89,7 +89,7 @@
 							<div>
 								<button class="white black button2 kilo" type="submit">Join</button>
 							</div>
-							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
+							<input type="hidden" name="_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
 					</div>
 				</div>
