--- a/signup.html
+++ b/signup.html
@@ -108,7 +108,7 @@
 							<div>
 								<button class="white button2 kilo tocantins" type="submit">Login</button>
 							</div>
-							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
+							<input type="hidden" name="_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
 					</div>
 				</div>
