--- a/subscriptions.html
+++ b/subscriptions.html
@@ -87,7 +87,7 @@
 							<div>
 								<button class="white tocantins button2 kilo" type="submit">Login</button>
 							</div>
-							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
+							<input type="hidden" name="_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
 					</div>
 				</div>
