--- a/index.html
+++ b/index.html
@@ -45,27 +45,21 @@
 					<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-2-3">
 						<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
 						<p class="white">An online language learning program for beginners of all ages.</p>
-						<a class="tocantins white button" href="signup.html">Sign up</a>
+						<a class="tocantins white button" href="subscriptions.html">Subscription plans</a>
 					</div>
 				</div>
 			</div>
 			<div class="grid pad-t-2 pad-b whiteback">
 				<div class="sidesgutter mw unit-l-centered">
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2 text-center">
-						<div class="embed embed--1by1">
-							<a href="features.html">
-								<img class="embed__item" src="images/bubblebadge.png" alt="Feature badge">
-							</a>
-						</div>
-						<a href="features.html">Features</a>
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
+						<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
 					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2 text-center">
-						<div class="embed embed--1by1">
-							<a href="subscriptions.html">
-								<img class="embed__item" src="images/personbadge.png" alt="Subscription badge">
-							</a>
-						</div>
-						<a href="subscriptions.html">Subscriptions</a>
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
+						<p class="bold push-0">WHO CAN USE SPEAKEASY?</p>
+						<p>SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.</p>
+					</div>
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 unit-push-l-1-4 gutter-1-2">
+						<p class="tocantins button"><a class="white" href="features.html">Take a tour</a></p>
 					</div>
 				</div>
 			</div>
